<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.keypair.ImportKeyActivity">
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        app:title="@string/import_key"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        style="@style/ToolBar.WithBackIcon" />
    <ImageView
        android:id="@+id/image"
        android:layout_margin="16dp"
        android:tint="@color/colorPrimary"
        android:src="@drawable/ic_vpn_key_black_24dp"
        app:layout_constraintWidth_percent="0.3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        app:layout_constraintDimensionRatio="1:1"
        android:layout_width="0dp"
        android:layout_height="0dp" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <View
            android:layout_width="wrap_content"
            android:layout_height="16dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/import_from_pgp" />

        <Button
            style="@style/Widget.AppCompat.Button.Colored"
            android:id="@+id/paste_private_key_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/paste_private_key"
            android:textAllCaps="false" />

        <View
            android:visibility="gone"
            android:layout_width="wrap_content"
            android:layout_height="16dp" />

        <TextView
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/import_from_another_device" />

        <Button
            android:visibility="gone"
            android:id="@+id/scan_qr_code_button"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/scan_qr_code"
            android:textAllCaps="false" />

        <View
            android:visibility="gone"
            android:layout_width="wrap_content"
            android:layout_height="16dp" />

        <TextView
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/import_from_a_previous_backup" />

        <Button
            android:visibility="gone"
            android:id="@+id/mnemonic_words_button"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/mnemonic_words"
            android:textAllCaps="false" />

        <View
            android:layout_width="wrap_content"
            android:layout_height="16dp" />

        <Button
            android:id="@+id/cancel_button"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/maybe_later"
            android:textAllCaps="false" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>