<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.keypair.CreateKeyActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        style="@style/ToolBar.WithBackIcon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:title="@string/create_keypair" />

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@id/create_key_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:helperText=" ">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/name_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/name"
                    android:inputType="text"
                    tools:text="dsad" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:helperText=" ">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/mail_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    tools:text="dsad" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:helperText="@string/password_desc">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/password_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    tools:text="dsad" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:helperText="@string/password_conform_desc">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/password_confirm_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password_confirm"
                    android:inputType="textPassword" />
            </com.google.android.material.textfield.TextInputLayout>

            <CheckBox
                android:id="@+id/easy_mode_check_box"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:button="@null"
                android:checked="true"
                android:drawableEnd="?android:attr/listChoiceIndicatorMultiple"
                android:text="@string/easy_mode" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/adv_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:visibility="gone"
                tools:visibility="visible">
                <TextView
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintBottom_toBottomOf="@id/key_algorithm_spinner"
                    app:layout_constraintTop_toTopOf="@id/key_algorithm_spinner"
                    android:paddingEnd="4dp"
                    android:paddingStart="4dp"
                    android:text="@string/algorithm"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <Spinner
                    android:id="@+id/key_algorithm_spinner"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintWidth_percent="0.4" />
                <TextView
                    android:id="@+id/title_key_length"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintBottom_toBottomOf="@id/key_length_spinner"
                    app:layout_constraintTop_toTopOf="@id/key_length_spinner"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingStart="4dp"
                    android:paddingEnd="4dp"
                    android:text="@string/key_length" />

                <Spinner
                    app:layout_constraintWidth_percent="0.4"
                    app:layout_constraintTop_toBottomOf="@id/key_algorithm_spinner"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:id="@+id/key_length_spinner"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:prompt="@string/key_length" />
            </androidx.constraintlayout.widget.ConstraintLayout>
            <!--<TextView-->
            <!--android:paddingStart="4dp"-->
            <!--android:paddingEnd="4dp"-->
            <!--android:text="@string/key_length"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content" />-->
            <!--<Spinner-->
            <!--android:id="@+id/key_length_spinner"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"/>-->
            <!--<Switch-->
            <!--android:visibility="gone"-->
            <!--android:padding="4dp"-->
            <!--android:text="@string/publish_publish_key"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content" />-->
        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/create_key_button"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/create_key"
        android:textAllCaps="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>