<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.contact.ImportContactActivity">
    <androidx.appcompat.widget.Toolbar
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        style="@style/ToolBar.WithBackIcon"
        app:title="@string/import_public_key"
        android:id="@+id/toolbar"/>
    <EditText
        android:gravity="top"
        android:hint="@string/public_key"
        android:id="@+id/import_text"
        app:layout_constraintBottom_toTopOf="@id/import_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        android:layout_width="0dp"
        android:layout_height="0dp" />
    <Button
        style="@style/Widget.AppCompat.Button.Colored"
        android:id="@+id/import_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:text="@string/string_import"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
</androidx.constraintlayout.widget.ConstraintLayout>